# repo_forge_orchestrator

./: .gitignore  ADDITION.md  AGENTS.md  Cargo.toml  PLAN.md  README.md  deny.toml  install.ps1  install.sh  rust-toolchain.toml
.beads/: config.yaml  issues.jsonl
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml  release.yml
.sisyphus/: ralph-loop.local.md
.sisyphus/run-continuation/: ses_1b9ece6c4ffem59dVbfMGU0Mvj.json
crates/rfo/: Cargo.toml
crates/rfo-ai-sync/: Cargo.toml
crates/rfo-ai-sync/src/: lib.rs
crates/rfo-config/: Cargo.toml
crates/rfo-config/src/: lib.rs  loader.rs  paths.rs  policy.rs  schema.rs  validate.rs
crates/rfo-context/: Cargo.toml
crates/rfo-context/src/: cache.rs  lib.rs  pack.rs
crates/rfo-core/: Cargo.toml
crates/rfo-core/src/: error.rs  lib.rs  paths.rs  redaction.rs  repo_spec.rs
crates/rfo-dep-update/: Cargo.toml
crates/rfo-dep-update/src/: lib.rs
crates/rfo-git/: Cargo.toml
crates/rfo-git/src/: conflict.rs  lib.rs  lock.rs  mutation.rs  read.rs  status.rs
crates/rfo-github/: Cargo.toml
crates/rfo-github/src/: auth.rs  checks.rs  client.rs  import.rs  issues.rs  lib.rs
crates/rfo-jobs/: Cargo.toml
crates/rfo-jobs/src/: events.rs  failure.rs  lib.rs  run.rs
crates/rfo-mcp/: Cargo.toml
crates/rfo-mcp/src/: lib.rs  resources.rs  server.rs  tools.rs
crates/rfo-ntm/: Cargo.toml
crates/rfo-ntm/src/: lib.rs
crates/rfo-output/: Cargo.toml
crates/rfo-output/src/: format.rs  json.rs  lib.rs  ndjson.rs  text.rs
crates/rfo-provider/: Cargo.toml
crates/rfo-provider/src/: claude.rs  codex.rs  lib.rs  traits.rs
crates/rfo-review/: Cargo.toml
crates/rfo-review/src/: apply.rs  lib.rs  plan.rs
crates/rfo-state/: Cargo.toml
crates/rfo-state/src/: lib.rs  migrate.rs  queries.rs
crates/rfo-sweep/: Cargo.toml
crates/rfo-sweep/src/: agent.rs  commit.rs  denylist.rs  lib.rs  policy_check.rs  quality_gates.rs  risk.rs  secret_scan.rs  train.rs
crates/rfo-sync/: Cargo.toml
crates/rfo-sync/src/: lib.rs  manage.rs  prune.rs  status.rs  sync.rs
crates/rfo-testkit/: Cargo.toml
crates/rfo-testkit/src/: fakes.rs  fixtures.rs  lib.rs
crates/rfo/src/: doctor.rs  main.rs
crates/rfo/tests/: cli_init.rs
xtask/: Cargo.toml
xtask/src/: main.rs
