[workspace]
members = [
    "crates/rfo",
    "crates/rfo-core",
    "crates/rfo-config",
    "crates/rfo-output",
    "crates/rfo-state",
    "crates/rfo-git",
    "crates/rfo-github",
    "crates/rfo-jobs",
    "crates/rfo-sync",
    "crates/rfo-context",
    "crates/rfo-review",
    "crates/rfo-sweep",
    "crates/rfo-provider",
    "crates/rfo-mcp",
    "crates/rfo-testkit",
    "xtask",
]
resolver = "3"
default-members = ["crates/rfo"]

[workspace.package]
version = "0.1.0"
authors = ["quangdang46 <quangdang46@github.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quangdang46/repo_forge"
keywords = ["repo", "github", "orchestration", "cli", "devops"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Core crates (local)
rfo-core        = { path = "crates/rfo-core" }
rfo-config      = { path = "crates/rfo-config" }
rfo-output      = { path = "crates/rfo-output" }
rfo-state       = { path = "crates/rfo-state" }
rfo-git         = { path = "crates/rfo-git" }
rfo-github      = { path = "crates/rfo-github" }
rfo-jobs        = { path = "crates/rfo-jobs" }
rfo-sync        = { path = "crates/rfo-sync" }
rfo-context     = { path = "crates/rfo-context" }
rfo-review      = { path = "crates/rfo-review" }
rfo-sweep       = { path = "crates/rfo-sweep" }
rfo-provider    = { path = "crates/rfo-provider" }
rfo-mcp         = { path = "crates/rfo-mcp" }
rfo-testkit     = { path = "crates/rfo-testkit" }

# External — shared across multiple crates
anyhow          = "1.0"
thiserror       = "2.0"
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
tokio           = { version = "1.44", features = ["rt-multi-thread", "macros", "process", "time", "io-util"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap            = { version = "4.5", features = ["derive", "env", "string"] }
rusqlite        = { version = "0.34", features = ["bundled", "modern_sqlite"] }
gix             = { version = "0.71", features = ["max-performance"] }
octocrab        = { version = "0.44", features = ["retry"] }
fs4             = "0.13"
reqwest         = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2            = "0.10"
regex           = "1.11"
indexmap        = "2.7"
toml            = "0.8"
dirs            = "5.0"
indicatif       = "0.17"
console          = "0.15"
owo-colors      = "4.1"
comfy-table     = "7.1"
time             = { version = "0.3", features = ["serde", "formatting", "parsing"] }
uuid             = { version = "1.16", features = ["v4", "serde"] }
chrono          = { version = "0.4", features = ["serde"] }
humantime        = "2.1"
similar         = "2.7"
tempfile         = "3.20"
wiremock        = "0.6"
assert_cmd      = "2.0"
predicates       = "3.1"
globset         = "0.4"
serde_yaml      = "0.9"

# Release profile — matches cargo-dist conventions.
[profile.release]
lto = "thin"
strip = "symbols"
opt-level = 3
codegen-units = 16
panic = "abort"
debug = false

[profile.dev]
opt-level = 0
debug = true
lto = false
incremental = true
codegen-units = 256
panic = "unwind"
