[package]
name = "rfo-ai-sync"
description = "AI-powered auto-commit for dirty repos (ai-sync) for rfo"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
rfo-config.workspace = true
rfo-git.workspace = true
rfo-ntm.workspace = true
rfo-jobs.workspace = true
rfo-sync.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true