[package]
name = "rfo-config"
description = "Configuration loading, XDG paths, validation, and schema"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rfo-core.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs.workspace = true
