[package]
name = "rfo-core"
description = "Core types, errors, repo specs, paths, ids, and redaction"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
time.workspace = true
regex.workspace = true
dirs.workspace = true
