[package]
name = "rfo-dep-update"
description = "AI-powered dependency updates (dep-update) for rfo"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
rfo-core.workspace = true
rfo-config.workspace = true
rfo-git.workspace = true
rfo-ntm.workspace = true
rfo-jobs.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true