[package]
name = "rfo-github"
description = "GitHub REST/GraphQL client (auth, repo lookup, issues/PRs, checks)"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
rfo-core.workspace = true
octocrab.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
