[package]
name = "rfo-jobs"
description = "Lightweight durable job execution and event recording"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
rfo-core.workspace = true
rfo-state.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
time.workspace = true
tokio.workspace = true
