[package]
name = "rfo-mcp"
description = "MCP server for AI-driven rfo operations"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rfo-core.workspace = true
rfo-config.workspace = true
rfo-state.workspace = true
rfo-sync.workspace = true
rfo-context.workspace = true
rfo-review.workspace = true
rfo-sweep.workspace = true
rfo-jobs.workspace = true
rfo-output.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
rmcp = "0.1"
