[package]
name = "rfo-provider"
description = "AI provider abstraction (Claude, Codex)"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rfo-core.workspace = true
rfo-config.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait = "0.1"
