[package]
name = "rfo-review"
description = "Review plan/apply commands with safety gates"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
rfo-core.workspace = true
rfo-config.workspace = true
rfo-state.workspace = true
rfo-git.workspace = true
rfo-jobs.workspace = true
rfo-output.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
similar.workspace = true
comfy-table.workspace = true
