[package]
name = "rfo-state"
description = "SQLite schema, migrations, and queries for rfo"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
rfo-core.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
time.workspace = true

[dev-dependencies]
tempfile.workspace = true
