[package]
name = "rfo-sweep"
description = "Sweep commit and sweep agent for AI-driven automation"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rfo-core.workspace = true
rfo-config.workspace = true
rfo-state.workspace = true
rfo-git.workspace = true
rfo-jobs.workspace = true
rfo-provider.workspace = true
rfo-output.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
comfy-table.workspace = true
tempfile.workspace = true
