[package]
name = "rfo-sync"
description = "Sync, status, prune, import, add, remove, list commands"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
rfo-core.workspace = true
rfo-config.workspace = true
rfo-output.workspace = true
rfo-state.workspace = true
rfo-git.workspace = true
rfo-jobs.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
indicatif.workspace = true
console.workspace = true
rusqlite.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
