[package]
name = "rfo-testkit"
description = "Test fixtures, fakes, and utilities for rfo"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
rfo-core.workspace = true
rfo-state.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
serde_json.workspace = true
anyhow.workspace = true
